# pybbi

./: .gitignore  .travis.yml  CITATION.cff  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: buildwheels.yml  ci.yml  publish.yml  python-package.yml
bbi/: __init__.py  _bbi.py  cbbi.pxd  cbbi.pyx
ci/: buildwheel_macos.sh  buildwheel_macos11.sh  buildwheel_macosx.sh  buildwheel_manylinux.sh
htslib/: Makefile
include/: bbiFile.h  bedTabix.h  common.h  common.mk  hash.h  localmem.h  net.h
kent/: __init__.py  bbi.pxd  bbi.pyx
scripts/: README.md  bbiFile.h.diff  bbiRead.c.diff  bigBed.c.diff  htslib_makefile.diff  https.c.diff  makefile.diff  patch_source.sh  redirect_status_codes.diff
src/: Makefile  _makefile  basicBed.c  bbiRead.c  bigBed.c  common.c  hash.c  https.c  localmem.c  makefile  net.c  udc.c
src/tests/: makefile
tests/: test_bbi.py
